# CodeIR

./: .gitignore  DELIVERY.md  README.md  RUN_COMMANDS.md  pyproject.toml  run_codeir.py
deploy/: 01_prepare_and_gen.sh  02_train_three_lora.sh  03_eval_compare.sh  _common.sh  backup_download_models.sh  linux_download_student.sh  linux_download_teacher.sh  linux_one_click.sh  linux_requirements_note.md  wozailinux1_distill.sh
docs/: 实验设计_v0.md  数据格式参考_v0.md  需求文档_A实验_API蒸馏到比对_v1.md  需求文档_v0.md
examples/: problem_lis.json  testcases_lis.json  triple_lis.json
examples/teacher_mock/: lc-300-demo.json
src/codeir/: __init__.py  cli.py  datasets_leetcode.py  eval_compare.py  exporters.py  infer.py  ir.py  metrics.py  parsing.py  pipeline.py  schemas.py  teacher.py  teacher_api.py  verifier.py
tools/: diff_dist.py  resplit_verified.py  scan_dropped.py
