[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeir"
version = "0.1.0"
description = "Minimal runnable deployment for the CodeIR pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
download = [
  "huggingface_hub[cli]>=0.23.0",
]
inference = [
  "accelerate==1.1.1",
  "bitsandbytes==0.43.3; platform_system == 'Linux'",
  "peft==0.13.2",
  "torch==2.5.1",
  "transformers==4.46.3",
]
train = [
  "accelerate==1.1.1",
  "bitsandbytes==0.43.3; platform_system == 'Linux'",
  "datasets>=2.19.0",
  "huggingface_hub[cli]>=0.23.0",
  "peft==0.13.2",
  "torch==2.5.1",
  "transformers==4.46.3",
  "trl>=0.9.0",
]
all = [
  "accelerate==1.1.1",
  "bitsandbytes==0.43.3; platform_system == 'Linux'",
  "datasets>=2.19.0",
  "huggingface_hub[cli]>=0.23.0",
  "peft==0.13.2",
  "torch==2.5.1",
  "transformers==4.46.3",
  "trl>=0.9.0",
]

[project.scripts]
codeir = "codeir.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
