[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeir"
version = "0.1.0"
description = "Minimal runnable deployment for the CodeIR pipeline."
readme = "README.md"
requires-python = ">=3.10"
# sortedcontainers: pure-python, zero conflict with the ML stack; the verifier
# execs each LeetCodeDataset `prompt` prefix which does `from sortedcontainers
# import SortedList`. Missing it -> ModuleNotFoundError -> silent false drops.
dependencies = ["sortedcontainers>=2.4"]

# NOTE: On the training server the ML stack (torch/transformers/peft/accelerate/
# datasets/trl) is owned by LLaMA-Factory as one self-consistent set, and codeir
# is installed with --no-deps (see deploy/01_prepare_and_gen.sh). These extras are
# only for standalone use; they use loose floors (py3.11 / CUDA 12.x friendly) so
# they do NOT pin exact versions and fight an existing install.
[project.optional-dependencies]
download = [
  "huggingface_hub[cli]>=0.23.0",
]
# Floors below are the lowest versions observed to actually import+train against
# a recent LLaMA-Factory (commit cabe59a, 2026-06): it pins transformers>=4.55 and
# transformers in turn requires accelerate>=1.3. Older floors (4.45 / 1.0) crash at
# import (`make_flat_list_of_images`, accelerate require_version). torchaudio/
# torchvision are NOT listed: LLaMA-Factory pulls them, and the only gotcha is the
# CUDA build must match torch's (torch 2.5.1+cu124 -> torchaudio/vision cu124 wheels;
# a cu13 wheel fails with `libcudart.so.13` / `torchvision::nms does not exist`).
ml = [
  "torch>=2.4",
  "transformers>=4.55,<5",
  "peft>=0.12",
  "accelerate>=1.3",
  "datasets>=2.19",
  "trl>=0.9",
  "huggingface_hub>=0.23",
]
# Back-compat aliases: all/inference/train resolve to the same loose ML set.
inference = ["codeir[ml]"]
train = ["codeir[ml]"]
all = ["codeir[ml]"]

[project.scripts]
codeir = "codeir.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
